# mycpp

./: .gitignore  CMakeLists.txt  README.md  msado15.tlh  mycpp.sln
Common/: DateTime.hpp  Encoding.hpp  MSWinApi.hpp  Meta.hpp  MyCond.hpp  MyMutexRW.hpp  Sigleton_c11.hpp  Singleton.hpp  Singleton_boost.hpp  StrUtil.hpp  Utils.hpp  common.h  mydefs.h  mytypes.h  noncopyable.h  tstring.h
Common/Mutex/: MyCond.hpp  MyMutex.hpp  MyMutexRW.hpp
Common/String/: StrUtil.hpp  StringBuilder.hpp  string.hpp
Common/Thread/: Thread.hpp  ThreadPool.hpp
Common/Thread/impl/: Thread.ipp  ThreadPool.ipp
Common/Time/: DateTime.hpp  TimeMeter.hpp  Timer.hpp
Common/Time/impl/: TimeMeter.ipp  Timer.ipp
DBAccess/: CMakeLists.txt  DBAccess.vcxproj  DBAccess.vcxproj.filters
DBAccess/ado/: AdoConnection.cpp  AdoConnection.h  AdoRecordSet.cpp  AdoRecordSet.h
DBAccess/common/: ConnectionPool.cpp  ConnectionPool.h  DBAccessApi.cpp  DBAccessApi.h  TypeDef.h
DBAccess/mysql_api/: MysqlConnection.cpp  MysqlConnection.h  MysqlRecordSet.cpp  MysqlRecordSet.h
DBAccess/mysql_api/api/linux/: my_config.h
DBAccess/ocilib/: OciConnection.cpp  OciConnection.h  OciRecordSet.cpp  OciRecordSet.h
DBAccess/ocilib/api/linux/: libocilib.so.4  ocilib.h
DBAccess/ocilib/api/win/: ocilib.h  ociliba.lib  ocilibw.lib
Test/: CMakeLists.txt  Test.h  Test.vcxproj  Test.vcxproj.filters  TestMutexThread.cpp  TimerTest.hpp  lock_free_stack.cpp  main.cpp
Test/src/: TestMeta.hpp  TestMutex.hpp  TimerTest.hpp  main.cpp  spinlock.h
Test/src/Debug/: Test.ilk
Test/src/lockfree/: lock_free_stack.hpp
Test/src/ringbuffer/: ProducerConsumerQueue.h  demo.hpp
Test/src/worksteal/: demo.hpp  sync_deque.hpp  thread_pool.hpp  worker.hpp
